# Donkey-Kong-1981-Clone

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
data/: assets.json  cutscene_0.json  cutscene_5.json  level_1.json  level_2.json  level_3.json  level_4.json  level_data.json  menu_0.json  template.json
data/assets/: assets.json
data/cutscenes/: cutscene_0.json
data/levels/: level_1.json
include/: animation.h  barrel.h  consts.h  donkey_kong.h  input.h  ladder.h  level.h  movable_entity.h  peach.h  physics.h  platform.h  player.h  sprites.h  static_entity.h  structure.h  types.h
include/core/: animation.h  cmdline.h  game.h  gui.h  input.h  physics.h  sprite.h  sprite_utils.h  utils.h
include/core/gui/: gui_utils.h
include/core/physics/: physics.h  physics_enemy.h  physics_geometry.h  physics_utils.h
include/core/sprite/: sprite.h  sprite_utils.h
include/entities/abstract/: effect.h  enemy.h  entity.h  entity_utils.h  geometry.h  item.h  movable_entity.h  static_entity.h
include/entities/characters/: barrel.h  donkey_kong.h  enemy.h  peach.h  player.h
include/entities/environment/: ladder.h  platform.h
include/level/: cutscene.h  level.h  loader.h
lib/cjson/: Makefile.am
src/: Makefile.am  game.c  game.h  input.c  input.h  main.c  physics.c  player.c  player.h  sprites.c  sprites.h  types.h
src/Animation/: animation.c
src/Figures/: player.c
src/Input/: input.c
src/Level/: barrel.c  ladder.c  level.c  platform.c  static_entity.c  structure.c
src/Movable_Entities/: donkey_kong.c  movable_entity.c  peach.c  player.c
src/Physic/: physics.c
src/Sprite/: animation.c  sprites.c
src/core/: animation.c  cmdline.c  game.c  gui.c  gui_utils.c  input.c  physics.c  sprite.c  sprite_utils.c  utils.c
src/core/gui/: gui.c  gui_utils.c
src/core/physics/: physics.c  physics_enemy.c  physics_geometry.c  physics_utils.c
src/core/sprite/: animation.c  sprite.c  sprite_utils.c
src/entities/abstract/: effect.c  enemy.c  entity.c  entity_utils.c  geometry.c  item.c  movable_entity.c  static_entity.c  structure.c
src/entities/characters/: barrel.c  donkey_kong.c  enemy.c  peach.c  player.c
src/entities/environment/: effect.c  item.c  ladder.c  platform.c
src/level/: cutscene.c  level.c  loader.c
